redirection of imagen in archive img

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="cabecera" id="cabecera">
         <nav class="nav">
             <div class="nav__logo" id="logoweb">
-                <img src="LOGO/Product (8).png"  class="nav__logo-img" id="nav__logo-img"alt="logoPortafolio">
+                <img src="img/Product (8).png"  class="nav__logo-img" id="nav__logo-img"alt="logoPortafolio">
             </div>
 
             <div class="nav__list" id="nav__list">
